--- a/public_html/projeto-glass-html5/index.html
+++ b/public_html/projeto-glass-html5/index.html
@@ -4,6 +4,12 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Tudo sobe Google Glass</title>
+        <style>
+            p {
+                text-align: justified;
+                text-indent: 50px;
+            }
+        </style>
     </head>    
 
     <body>
@@ -33,8 +39,18 @@
                 <h3>Atualizado em 23/Abril/2013</h3>
             </hgroup>
 
+            <pre>
+            <code>
+            #include &lt;iostream&gt;
+                int main() {
+                    cout << "Olá, Mundo!";
+                    return 0;
+                }
+            </code>
+            </pre>
+
             <h2>O que é</h2>
-            <p>O <b>Google Glass</b> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
+            <p>O <span style="font-weight:900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <em>Project Glass</em>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
             [AQUI ENTRA UMA FOTO]
 
@@ -68,7 +84,7 @@
             <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
 
             <p>Copyright 2013 - by Gustavo Guanabara
-            Facebook | Twitter</p>
+                Facebook | Twitter</p>
         </div>
     </body>
 
