--- a/public_html/projeto-glass-html5/index.html
+++ b/public_html/projeto-glass-html5/index.html
@@ -5,6 +5,10 @@
         <meta charset="UTF-8"/>
         <title>Tudo sobe Google Glass</title>
         <style>
+            body {
+                background-color: hsla(165, 81%, 93%, 0.5);
+                color: rgba(0, 0, 0, 1);
+            }
             p {
                 text-align: justified;
                 text-indent: 50px;
@@ -39,15 +43,15 @@
                 <h3>Atualizado em 23/Abril/2013</h3>
             </hgroup>
 
-            <pre>
-            <code>
-            #include &lt;iostream&gt;
-                int main() {
-                    cout << "Olá, Mundo!";
-                    return 0;
-                }
-            </code>
-            </pre>
+<!--            <pre>
+                <code>
+                #include &lt;iostream&gt;
+                    int main() {
+                        cout << "Olá, Mundo!";
+                        return 0;
+                    }
+                </code>
+            </pre>-->
 
             <h2>O que é</h2>
             <p>O <span style="font-weight:900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <em>Project Glass</em>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
