--- a/public_html/projeto-glass-html5/index.html
+++ b/public_html/projeto-glass-html5/index.html
@@ -18,13 +18,20 @@
 
 
                 <img src="_imagens/glass-oculos-preto-peq.png">
-
-                Menu Principal
-                - Home
-                - Especificações
-                - Fotos
-                - Multimídia
-                - Fale conosco
+                <nav>
+                    <h1>Menu Principal</h1>
+                    <ul>
+                        <li>Home</li>
+                        <li>Especificações</li>
+                        <li>Fotos</li>
+                        <li>Multimídia</li>
+                        <ul>
+                            <li>Músicas</li>
+                            <li>Vídeos</li>
+                        </ul>
+                        <li>Fale Conosco</li>
+                    </ul>
+                </nav>
             </header>
 
             <hgroup>
@@ -34,15 +41,15 @@
                 <h3>Atualizado em 23/Abril/2013</h3>
             </hgroup>
 
-<!--            <pre>
-                <code>
-                #include &lt;iostream&gt;
-                    int main() {
-                        cout << "Olá, Mundo!";
-                        return 0;
-                    }
-                </code>
-            </pre>-->
+            <!--            <pre>
+                            <code>
+                            #include &lt;iostream&gt;
+                                int main() {
+                                    cout << "Olá, Mundo!";
+                                    return 0;
+                                }
+                            </code>
+                        </pre>-->
 
             <h2>O que é</h2>
             <p>O <span style="font-weight:900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <em>Project Glass</em>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
