Ajustando conteúdo a depender do tamanho da tela

--- a/public_html/projeto-glass-html5/index.html
+++ b/public_html/projeto-glass-html5/index.html
@@ -90,7 +90,7 @@
 
             <aside id="lateral">
                 <h1>Outras Notícias</h1>
-                <h2>Videos mais recente</h2>
+                <h2>Videos mais recentes</h2>
 
                 [AQUI ENTRA UM VÍDEO]
 
