Aula 27 - iframe em html5

--- a/public_html/projeto-glass-html5/specs.html
+++ b/public_html/projeto-glass-html5/specs.html
@@ -5,10 +5,12 @@
         <meta charset="UTF-8"/>
         <title>Tudo sobe Google Glass</title>
         <link rel="stylesheet" href="_css/estilo.css"/>
+        <link rel="stylesheet" href="_css/specs.css"/>
+        
     </head>    
 
     <script language="javascript" src="_javascript/funcoes.js"></script>
-    
+
     <body>
         <div id="interface">
 
@@ -32,16 +34,30 @@
                 </nav>
             </header>
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+            <section id="corpo-full">
+                <article id="noticia-principal">
+                    <header id="cabecalho-artigo">
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+                        <hgroup>
+                            <h3>Glass > Especificações</h3>
+                            <h1>Raio-X no Google Glass</h1>
+                            <h2>por Gustavo Guanabara</h2>
+                            <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                        </hgroup>
+                    </header>
 
-[AQUI ENTRA UMA IMAGEM]
 
-<footer id="rodape">
+
+                    <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
+
+                    <section id="conteudo">
+                        <img src="_imagens/glass-esquema-marcado.jpg"/>
+                        <iframe name="janela" id="frame-spec" src="google-glass.html"></iframe>
+                    </section>
+                </article>
+            </section>
+
+            <footer id="rodape">
                 <p>Copyright 2013 - by Gustavo Guanabara <br>
                     <a href="https://www.facebook.com" target="_blank">Facebook</a> | 
                     <a href="https://www.twitter.com" target="_blank">Twitter</a>
