--- a/public_html/projeto-glass-html5/index.html
+++ b/public_html/projeto-glass-html5/index.html
@@ -8,7 +8,7 @@
     </head>    
 
     <script language="javascript" src="_javascript/funcoes.js"></script>
-    
+
     <body>
         <div id="interface">
 
@@ -84,7 +84,13 @@
                     <h2>O que você pode fazer com o Google Glasses</h2>
                     <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-                    [AQUI ENTRA UM VÍDEO]
+                    <div id="tv-radio">
+                        <video id="filme" controls="controls" poster="_imagens/video-mini01.jpg">
+                            <source src="_media/one-day.mp4" type="video/mp4"/>
+                            Desculpe, não foi possível carregar o vídeo.
+                        </video>
+                    </div>
+                    
                 </article>
             </section>
 
@@ -92,7 +98,12 @@
                 <h1>Outras Notícias</h1>
                 <h2>Videos mais recentes</h2>
 
-                [AQUI ENTRA UM VÍDEO]
+                <div id="tv-radio">
+                    <video id="filme" controls="controls" poster="_imagens/video-mini02.jpg">
+                        <source src="_media/how-it-feels.mp4" type="video/mp4"/>
+                        Desculpe, não foi possível carregar o vídeo.
+                    </video>
+                </div>
 
                 <h1>Novidades no Glass</h1>
                 <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
