--- a/public_html/projeto-glass-html5/fale-conosco.html
+++ b/public_html/projeto-glass-html5/fale-conosco.html
@@ -5,10 +5,11 @@
         <meta charset="UTF-8"/>
         <title>Tudo sobe Google Glass</title>
         <link rel="stylesheet" href="_css/estilo.css"/>
+        <link rel="stylesheet" href="_css/form.css"/>
     </head>    
 
     <script language="javascript" src="_javascript/funcoes.js"></script>
-    
+
     <body>
         <div id="interface">
 
@@ -32,40 +33,62 @@
                 </nav>
             </header>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+            <section id="corpo-full">
+                <article id="noticia-principal">
+                    <header id="cabecalho-artigo">
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+                        <hgroup>
+                            <h3>Fale Conosco > Contato</h3>
+                            <h1> Formulário de Contato</h1>
+                            <h2>por Gustavo Guanabara</h2>
+                            <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                        </hgroup>
+                    </header>
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+                    <form method="get">
+                        <fieldset id="usuario">
+                            <legend>Identificação do Usuário</legend>
+                            <p><label for="cNome">Nome</label> &nbsp;&nbsp;<input type="text" name="tNome" id="cNome" size="30" maxlength="35" placeholder="Nome Completo"/></p>
+                            <p><label for="cSenha">Senha</label> &nbsp;<input type="password" name="tSenha" id="cSenha" size="12" maxlength="12" placeholder="6 a 12 caracteres"</p>
+                            <p><label for="cEmail">E-mail</label> &nbsp;<input type="email" name="tEmail" id="cEmail" size="30" maxlength="35" placeholder="Digite seu e-mail"</p>
+                            <fieldset id="sexo">
+                                <legend>Sexo</legend>
+                                <input type="radio" name="rSexo" id="rMasc"> <label for="rMasc"> Masculino</label><br/>
+                                <input type="radio" name="rSexo" id="rFem"> <label for="rFem"> Feminino</label for="">
+                            </fieldset>
+                            <p><label for="cNasc">Data de Nascimento &nbsp;</label><input type="date" name="tNasc" id="cNasc" placeholder="Data de Nascimento"></p>
+                        </fieldset>
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+                        <fieldset id="endereco">
+                            <legend>Endereço do Usuário</legend>
+                            <p><label for="cLogradouro">Logradouro</label> &nbsp;<input type="text" name="tLogradouro" id="cLogradouro" size="29" maxlength="80" placeholder="Rua, Av, Travessa, etc."></p>
+                            <p><label for="cNumero">Número &nbsp;</label><input type="number" min="0" max="99999" name="tNumero" id="cNumero" placeholder="Número"></p>
+                            <p><label for="cComplemento">Complemento</label> &nbsp;<input name="tComplemento" id="cComplemento" size="26" maxlength="30" placeholder="Ap, Quadra, Lote, etc."></p>
+                            <p>Estado:</p>
+                            <p>Cidade:</p>
+                        </fieldset>
 
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+                        <fieldset id="mensagem">
+                            <legend>Mensagem do Usuário</legend>
+                            <p>Grau de Urgência:</p>
+                            <p>Mensagem:</p>
+                        </fieldset>
+
+                        <fieldset id="pedido">
+                            <legend>Quero um Google Glass</legend>
+                            <p>Gostaria de adquirir um Google Glass quando disponível</p>
+                            <p>Cor:</p>
+                            <p>Quantidade:</p>
+                            <p>Preço Total: R$</p>
+                        </fieldset>
 
 
-[BOTÃO ENVIAR]
+                        [BOTÃO ENVIAR]
+                    </form>
+                </article>
+            </section>
 
-<footer id="rodape">
+            <footer id="rodape">
                 <p>Copyright 2013 - by Gustavo Guanabara <br>
                     <a href="https://www.facebook.com" target="_blank">Facebook</a> | 
                     <a href="https://www.twitter.com" target="_blank">Twitter</a>
