--- a/public_html/projeto-glass-html5/fale-conosco.html
+++ b/public_html/projeto-glass-html5/fale-conosco.html
@@ -45,7 +45,7 @@
                         </hgroup>
                     </header>
 
-                    <form method="get">
+                    <form method="post" id="fContato" action="">
                         <fieldset id="usuario">
                             <legend>Identificação do Usuário</legend>
                             <p><label for="cNome">Nome</label> &nbsp;&nbsp;<input type="text" name="tNome" id="cNome" size="30" maxlength="35" placeholder="Nome Completo"/></p>
