--- a/public_html/projeto-glass-html5/fale-conosco.html
+++ b/public_html/projeto-glass-html5/fale-conosco.html
@@ -64,26 +64,62 @@
                             <p><label for="cLogradouro">Logradouro</label> &nbsp;<input type="text" name="tLogradouro" id="cLogradouro" size="29" maxlength="80" placeholder="Rua, Av, Travessa, etc."></p>
                             <p><label for="cNumero">Número &nbsp;</label><input type="number" min="0" max="99999" name="tNumero" id="cNumero" placeholder="Número"></p>
                             <p><label for="cComplemento">Complemento</label> &nbsp;<input name="tComplemento" id="cComplemento" size="26" maxlength="30" placeholder="Ap, Quadra, Lote, etc."></p>
-                            <p>Estado:</p>
-                            <p>Cidade:</p>
+                            <p><label for="cEst">Estado</label>
+                                <select name="tEst" id="cEst">
+                                    <optgroup label="Região Sudeste">
+                                        <option value="RJ">Rio de Janeiro</option>
+                                        <option value="SP">São Paulo</option>
+                                        <option value="MG">Minas Gerais</option>
+                                    </optgroup>
+                                    <optgroup label="Região Centro-Oeste">
+                                        <option value="DF">Distrito Federal</option>
+                                        <option value="GO">Goiás</option>
+                                        <option value="MT">Mato Grosso</option>
+                                    </optgroup>
+                                </select> </p>
+                            <option 
+                                </p>
+                            <p><label for="cCid">Cidade</label>
+                                <input type="text" name="tCid" id="cCid" size="20" maxlength="30" placeholder="Sua Cidade" list="cidades"/></p>
+                            <datalist id="cidades">
+                                <option value="Rio de Janeiro"></option>
+                                <option value="Brasília"></option>
+                                <option value="São Paulo"></option>
+                            </datalist>
                         </fieldset>
 
                         <fieldset id="mensagem">
                             <legend>Mensagem do Usuário</legend>
-                            <p>Grau de Urgência:</p>
-                            <p>Mensagem:</p>
+                            <p><label for="cUrg">Grau de Urgência: </label>
+                                &nbsp;Min<input type="range" name="tUrg" id="cUrg" min="1" max="5" step="1"/>Max</p>
+                            <p><label for="cMen">Mensagem:</label>
+                                <textarea name="tMen" id="cMen" cols="45" rows="6" placeholder="Deixe aqui sua mensagem"></textarea>
+                            </p>
                         </fieldset>
 
                         <fieldset id="pedido">
                             <legend>Quero um Google Glass</legend>
-                            <p>Gostaria de adquirir um Google Glass quando disponível</p>
-                            <p>Cor:</p>
-                            <p>Quantidade:</p>
-                            <p>Preço Total: R$</p>
+                            <p>
+                                <input type="checkbox" name="tPed" id="cPed"/>
+                                <label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label>
+                            </p>
+                            <p>
+                                <label for="cCor">Cor: </label>
+                                <input type="color" name="tCor" id="cCor" value="#606060"/>
+                            </p>
+                            <p>
+                                <label for="cQtd">Quantidade:</label>
+                                <input type="number" name="tQtd" id="cQtd" min="0" value="0"/>
+                            </p>
+                            <p>
+                                <label for="cTot">Preço Total: R$</label>
+                                <input type="text" name="tTot" id="cTot" placeholder="Total a pagar" readonly/>
+                            </p>
                         </fieldset>
 
 
-                        [BOTÃO ENVIAR]
+<!--                        <input type="submit" value="Enviar"/>-->
+                        <input type="image" name="tEnviar" id="cEnviar" src="_imagens/botao-enviar.png"/>
                     </form>
                 </article>
             </section>
