--- a/public_html/projeto-glass-html5/fale-conosco.html
+++ b/public_html/projeto-glass-html5/fale-conosco.html
@@ -9,6 +9,13 @@
     </head>    
 
     <script language="javascript" src="_javascript/funcoes.js"></script>
+    <script>
+        function calc_total() {
+            var qtd = parseInt(document.getElementById('cQtd').value);
+            tot = qtd * 1500;
+            document.getElementById('cTot').value = tot;
+        }
+    </script>
 
     <body>
         <div id="interface">
@@ -45,7 +52,7 @@
                         </hgroup>
                     </header>
 
-                    <form method="post" id="fContato" action="">
+                    <form method="post" id="fContato" action="" oninput="calc_total();">
                         <fieldset id="usuario">
                             <legend>Identificação do Usuário</legend>
                             <p><label for="cNome">Nome</label> &nbsp;&nbsp;<input type="text" name="tNome" id="cNome" size="30" maxlength="35" placeholder="Nome Completo"/></p>
@@ -91,9 +98,9 @@
                         <fieldset id="mensagem">
                             <legend>Mensagem do Usuário</legend>
                             <p><label for="cUrg">Grau de Urgência: </label>
-                                &nbsp;Min<input type="range" name="tUrg" id="cUrg" min="1" max="5" step="1"/>Max</p>
+                                <br/>&nbsp;Min<input type="range" name="tUrg" id="cUrg" min="1" max="5" step="1"/>Max</p>
                             <p><label for="cMen">Mensagem:</label>
-                                <textarea name="tMen" id="cMen" cols="45" rows="6" placeholder="Deixe aqui sua mensagem"></textarea>
+                                <textarea name="tMen" id="cMen" cols="35" rows="6" placeholder="Deixe aqui sua mensagem"></textarea>
                             </p>
                         </fieldset>
 
